fix text wrapping in saved list

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 
 /* top bar */
 #top-bar {
-  background:linear-gradient(to bottom,rgb(170, 252, 225),white);;
+  background: linear-gradient(to bottom, rgb(170, 252, 225), white);
   position: relative;
   display: flex;
   justify-content: left;
@@ -28,7 +28,7 @@ body {
 }
 
 #title {
-  background: linear-gradient(to right, green,blue);
+  background: linear-gradient(to right, green, blue);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
@@ -40,7 +40,7 @@ body {
 }
 
 #sign-in-button {
-  background-color:black;
+  background-color: black;
   color: rgb(185, 255, 232);
   padding: 5px 15px;
   border-radius: 5px;
@@ -102,6 +102,8 @@ input[type="checkbox"] {
 input[type="checkbox"] ~ label {
   padding-left: 1.7em;
   display: inline-block;
+  max-width: 300px;
+  overflow-wrap: break-word;
   margin-top: 6px;
 }
 
@@ -110,9 +112,10 @@ input[type="checkbox"] ~ label {
 #bottom-bar {
   background-color: rgb(185, 255, 232);
   padding: 5px;
+  align-items: center;
   display: flex;
-  align-items: top;
   justify-content: center;
+  width: 100%;
 }
 
 #github-icon {
